# Engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
MATH/: CMakeLists.txt
MATH/include/Math/: Quaternion.hpp  Vec3.hpp
MATH/src/: Mat3.cpp  Mat4.cpp  Transform3.cpp  Transformable3.cpp  Vec2.cpp  Vec4.cpp
MATH/tests/: CMakeLists.txt
cmake/: EngineConfig.cmake  EngineConfigVersion.cmake  GraphicsConfig.cmake  MathConfig.cmake
cmake/modules/: FindFreetype.cmake  FindGLFW3.cmake  FindGlad.cmake  FindGlfw.cmake  FindMath.cmake  FindStb.cmake
examples/FruitMerge/: CMakeLists.txt  ExecuteDebug.bat  ExecuteRelease.bat
examples/FruitMerge/src/: main.cpp
examples/FruitMerge/src/scenes/: Ball.hpp  BallsCollection.hpp  BallsController.hpp  Box2D.hpp  GameScene.hpp  Root.hpp  Scene.hpp  SceneLayer.hpp  UIScene.hpp
examples/FruitMerge/src/scenes/game/: Ball.hpp  BallsCollection.hpp  BallsController.hpp  Box2D.hpp  Camera.hpp  GameScene.hpp  UIScene.hpp
examples/FruitMerge/src/scenes/game/classic/: ClassicBallsController.hpp
examples/FruitMerge/src/scenes/game/sandbox/: SandboxBallsController.hpp
include/Engine/: Context.hpp
include/Engine/Core/: Engine.hpp  Logger.hpp  NameTag.hpp  Node.hpp  Node2D.hpp  Node3D.hpp  NodeNameTag.hpp  Resource.hpp  ResourceManager.hpp  SignalBus.hpp  String.hpp  TimeManager.hpp  Timer.hpp
include/Engine/Graphics/: CanvasItem.hpp  Color.hpp  Drawable.hpp  EventManager.hpp  Font.hpp  GeometricMesh.hpp  LightManager.hpp  Material.hpp  Mesh.hpp  PrimitiveType.hpp  RenderManager.hpp  RenderScene.hpp  RenderStates.hpp  RenderTarget.hpp  Shader.hpp  Shape2D.hpp  Text2D.hpp  Texture.hpp  View.hpp  Window.hpp
include/Engine/Graphics/2D/: Camera2D.hpp  CanvasItem.hpp  Shape2D.hpp  Sprite2D.hpp  Text2D.hpp
include/Engine/Graphics/3D/: Camera3D.hpp  GeometricMesh.hpp  Mesh.hpp
include/Engine/Graphics/shaders/: default2d.frag  default2d.vert  default3d-deferred-light.frag  default3d-deferred.frag  default3d.frag  default3d.vert
include/Engine/Math/: Mat3.hpp  Mat4.hpp  Quaternion.hpp  Transform2.hpp  Transform3.hpp  Transformable2.hpp  Transformable3.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
include/Engine/Physics/: PhysicsManager.hpp  PhysicsWorld.hpp
include/Engine/Physics/2D/: AreaBody2D.hpp  BVH.hpp  BVHNode.hpp  CircleCollider2D.hpp  Collider2D.hpp  CollisionData.hpp  CollisionDetector2D.hpp  PhysicsBody2D.hpp  RectangleCollider2D.hpp  RigidBody2D.hpp  SimpleCollisionDetectors2D.hpp  StaticBody2D.hpp
include/Engine/System/: AxisDevice.hpp  AxisDevice.inl  ButtonDevice.hpp  ButtonDevice.inl  EventManager.hpp  InputDevice.hpp  Keyboard.hpp  Mouse.hpp  Window.hpp
include/Graphics/: CanvasItem.hpp  Color.hpp  Drawable.hpp  Drawable3.hpp  EventManager.hpp  Font.hpp  FontManager.hpp  GeometricMesh.hpp  GeometricObject.hpp  LightManager.hpp  Material.hpp  Mesh.hpp  Object.hpp  RenderStates.hpp  Shader.hpp  Shape.hpp  Text.hpp  Text2D.hpp  Texture.hpp  TextureManager.hpp  Vertex.hpp  VertexBuffer.hpp  View.hpp  Window.hpp  default.frag  default.vert
include/Graphics/shaders/: default2d.frag  default2d.vert
include/Math/: Mat3.hpp  Mat4.hpp  Transform2.hpp  Transform3.hpp  Transformable3.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
src/: CanvasItem.cpp  Color.cpp  Drawable.cpp  Drawable3.cpp  EventManager.cpp  Font.cpp  FontManager.cpp  GeometricMesh.cpp  GeometricObject.cpp  LightManager.cpp  Mat3.cpp  Mat4.cpp  Material.cpp  Mesh.cpp  Object.cpp  Quaternion.cpp  RenderStates.cpp  Shader.cpp  Shape.cpp  Text.cpp  Text2D.cpp  Texture.cpp  TextureManager.cpp  Transform2.cpp  Transform3.cpp  Transformable2.cpp  Transformable3.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  VertexBuffer.cpp  View.cpp  Window.cpp
src/Core/: Engine.cpp  Logger.cpp  NameTag.cpp  Node.cpp  Node2D.cpp  Node3D.cpp  NodeNameTag.cpp  ResourceManager.cpp  SignalBus.cpp  String.cpp  TimeManager.cpp  Timer.cpp
src/Core/shaders/: default2d-frag.hpp  default2d-vert.hpp  default3d-deferred-frag.hpp  default3d-deferred-light-frag.hpp  default3d-vert.hpp
src/Graphics/: CanvasItem.cpp  Color.cpp  EventManager.cpp  Font.cpp  GeometricMesh.cpp  LightManager.cpp  Material.cpp  Mesh.cpp  RenderManager.cpp  RenderScene.cpp  RenderStates.cpp  RenderTarget.cpp  Shader.cpp  Shape2D.cpp  Text2D.cpp  Texture.cpp  View.cpp  Window.cpp
src/Graphics/2D/: Camera2D.cpp  CanvasItem.cpp  Shape2D.cpp  Sprite2D.cpp  Text2D.cpp
src/Graphics/3D/: Camera3D.cpp  GeometricMesh.cpp  Mesh.cpp
src/Math/: Mat3.cpp  Mat4.cpp  Quaternion.cpp  Transform2.cpp  Transform3.cpp  Transformable2.cpp  Transformable3.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
src/Physics/: PhysicsManager.cpp  PhysicsWorld.cpp
src/Physics/2D/: BVH.cpp  BVHNode.cpp  CircleCollider2D.cpp  Collider2D.cpp  CollisionData.cpp  CollisionDetector2D.cpp  RectangleCollider2D.cpp  RigidBody2D.cpp  SimpleCollisionDetectors2D.cpp  StaticBody2D.cpp
src/System/: EventManager.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
tests/: CMakeLists.txt  ExecuteEngine.bat  ExecuteGraphics.bat  ExecuteRelease.bat  Generate.bat  engine.cpp  graphics.cpp  main.cpp  math.cpp  test.cpp
